plugins {
    id 'application'
    id 'jacoco'
}

sourceCompatibility = JavaVersion.VERSION_11

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
    testImplementation("org.junit.jupiter:junit-jupiter-params:5.6.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
}
